# Frontend_rulliera_CPP

./: .gitignore  CMakeLists.txt  Persona.cpp  Persona.h  README.md  dbSet.h  modbus_toggle.db
AZModbus/: ModbusClient.cpp  ModbusClient.h
src/: dbSet.cpp  main.cpp  rulliera.cpp  rulliera.h
